--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,7 +151,7 @@
      height: 32px;
      text-align: center;
      line-height: 5px;
-     background: #b0b435;
+     background: grey;
      color: #ffffff;
      cursor: pointer;
      border: 0;
